Fixing a bug causing a horizontal scroll to appear

--- a/src/client/styles/search-bar.scss
+++ b/src/client/styles/search-bar.scss
@@ -9,6 +9,7 @@
     text-align: center;
     background-image: linear-gradient(to bottom, $color-dark-light, $color-dark);
     border-bottom: 1px solid lighten($color-dark, 5%);
+    box-sizing: border-box;
 
     div.hero {
         h1 {
